# analysis-aur-packages

./: README.md  pyproject.toml  requeriments.txt
src/analysis_aur/: main.py
src/analysis_aur/commands/: local_packet_analysis.py  uninstall_infected_packages.py
tests/command_test/: test_local_packet_analysis.py
tests/commands_test/: test_local_packet_analysis.py
